# hsi-compression

./: .gitignore  Makefile  evaluate.py  generate_dummy_data.py  pyproject.toml  quick_check.py  test_e2e.py  train.py
ansible/: .gitignore  README.md  all.yml  ansible.cfg  dataset.yml  evaluate.yml  inventory.example.ini  quickstart.sh  setup.yml  train.yml  verify.yml
ansible/roles/dataset_setup/tasks/: main.yml
ansible/roles/environment_setup/tasks/: main.yml
ansible/roles/evaluation/tasks/: main.yml
ansible/roles/project_setup/tasks/: main.yml
ansible/roles/python_setup/tasks/: main.yml
ansible/roles/system_setup/tasks/: main.yml
ansible/roles/training/tasks/: main.yml
hsi_compression/configs/: default.yaml
hsi_compression/configs/models/: mamba_lossy.yaml  tcn_lossless.yaml
hsi_compression/datasets/: __init__.py  hyspecnet11k.py  registry.py  transforms.py
hsi_compression/engine/: __init__.py  checkpoint.py  evaluator.py  trainer.py
hsi_compression/losses/: __init__.py  distortion.py  rate.py  registry.py
hsi_compression/metrics/: __init__.py  quality.py  registry.py
hsi_compression/models/: __init__.py  base.py  registry.py
hsi_compression/models/mamba/: __init__.py  decoder.py  encoder.py  hyperprior.py  model.py
hsi_compression/models/tcn/: __init__.py  layers.py  model.py
hsi_compression/utils/: __init__.py  config.py  entropy.py  logging.py
pipelines/pull-dataset/: main.py
pipelines/upload-dataset/: .env.example  main.py
utils/: tif_to_npy.ipynb  tif_to_npy.py
