[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi-compression"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.0.0",
    "pytorch_msssim>=0.1.0",
    "tqdm>=4.62.0",
    "omegaconf>=2.3.0",
    "torchac>=0.9.3",
    "ninja>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.0",
    "autopep8>=1.6.0",
    "mypy>=0.990",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "pre-commit>=2.17.0",
]

experiments = [
    "wandb>=0.12.0",
    "weave>=0.13.0",
    "boto3>=1.20.0",
    "tensorboard>=2.10.0",
]

mamba = [
    "mamba-ssm>=1.2.0",
]

all = [
    "hsi-compression[dev,experiments,mamba]",
]

[tool.setuptools]
packages = ["hsi_compression"]

[tool.setuptools.package-data]
hsi_compression = [
    "configs/*.yaml",
    "configs/models/*.yaml",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # bad-whitespace
    "C0103",           # invalid-name
    "R0913",           # too-many-arguments
    "R0914",           # too-many-locals
    "W0212",           # protected-access
]

[tool.pylint.format]
max-line-length = 120
